--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </footer>
         
         <script src="script.js"></script>
-teste stefany 
+        <h2>Ellahhhhhhh</h2>
     </body> 
 
 </html>
