--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Collector's Portal</title>
-        <link rel="stylesheet" href="ccs/styles.css">
+        <link rel="stylesheet" href="../css/styles.css">
     </head>
 
     <body>
