Mensagem do commit

--- a/html/index.html
+++ b/html/index.html
@@ -21,46 +21,30 @@
             <nav class="navbar">
                 <ul class="nav-links">
                     <li class="nav-item dropdown">
-                        <a href="#">New Releases</a>
+                        <a href="colecoes/miniaturasAuto.html">Miniaturas Automotivas</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a href="#">Automotive Miniatures</a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#"></a></li>
-                            <li><a href="#"></a></li>
-                            <li><a href="#"></a></li>
-                        </ul>
+                        <a href="colecoes/miniaturasLocomotivas.html">Miniaturas Locomotivas</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a href="#">Locomotive Miniatures</a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#"></a></li>
-                            <li><a href="#"></a></li>
-                            <li><a href="#"></a></li>
-                        </ul>
+                        <a href="colecoes/selos.html">Selos</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a href="#">Stamps</a>
+                        <a href="colecoes/moedas.html">Moedas</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a href="#">Coins</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a href="#">Comic Books</a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#"></a></li>
-                            <li><a href="#"></a></li>
-                            <li><a href="#"></a></li>
-                        </ul>
+                        <a href="colecoes/comicBooks.html">Comic Books</a>
                     </li>
                 </ul>
             </nav>
         </header>
 
         <main>
-            <h2>Welcome to the Collector's Portal</h2>
-            <p>Manage your collections with ease.</p>
-            <a href="collections.html" class="button">View Collections</a>
+            <div class="below-navbar">
+                <h2>Bem-vindo</h2>
+                <a href="collections.html" class="button">View Collections</a>
+            </div>
+            
         </main>
 
         <section>
