Mensagem do commit

--- a/html/index.html
+++ b/html/index.html
@@ -41,7 +41,7 @@
         <main>
             <div class="below-navbar">
                 <h2>Bem-vindo</h2>
-                <a href="collections.html">Coleções</a>
+                <a href="collections.html" class="button">Ver coleções</a>
             </div>
             
         </main>
