Mensagem do commit

--- a/html/index.html
+++ b/html/index.html
@@ -59,9 +59,7 @@
             <p>&copy; 2025 Collector's Portal</p>
         </footer>
         
-        <script src="script.js"></script>
-        <h2>Ellahhhhhhh</h2>
-        <h2>ISEP</h2>
+        <script src="../java/scrip.js"></script>
     </body> 
 
 </html>
