--- a/html/colecoes.html
+++ b/html/colecoes.html
@@ -17,6 +17,23 @@
                 </div>
             </div>
         </header>
+
+        <section class="collection-slider">
+            <h2>Miniaturas Locomotivas</h2>
+            <div class="slider-container">
+                <button id="prevBtn" class="nav-btn">&#10094;</button> <!-- Seta Esquerda -->
+                <div class="slider">
+                    <div class="slide"><img src="../imagens/locomotiva1.jpg" alt="Locomotiva 1"></div>
+                    <div class="slide"><img src="../imagens/locomotiva2.jpg" alt="Locomotiva 2"></div>
+                    <div class="slide"><img src="../imagens/locomotiva3.jpg" alt="Locomotiva 3"></div>
+                    <div class="slide"><img src="../imagens/locomotiva2.jpg" alt="Locomotiva 2"></div>
+                    <div class="slide"><img src="../imagens/locomotiva3.jpg" alt="Locomotiva 3"></div>
+                    <div class="slide"><img src="../imagens/locomotiva1.jpg" alt="Locomotiva 1"></div>
+                </div>
+                <button id="nextBtn" class="nav-btn">&#10095;</button> <!-- Seta Direita -->
+            </div>
+        </section>
+        
     </body>
 
 </html>
