--- a/html/index.html
+++ b/html/index.html
@@ -34,6 +34,9 @@
                     <li class="nav-item dropdown">
                         <a href="colecoes/comicBooks.html">Comic Books</a>
                     </li>
+                    <li class="nav-item dropdown">
+                        <a href="eventos.html">Eventos</a>
+                    </li>
                 </ul>
             </nav>
         </header>
