Mensagem do commit8

--- a/html/index.html
+++ b/html/index.html
@@ -44,7 +44,7 @@
         <main>
             <div class="below-navbar">
                 <h1>Bem-vindo</h1>
-                <button href="colecoes.html" class="button-collection">Ver coleções</button>
+                <a href="colecoes.html" class="button-collection">Ver coleções</a>
             </div>
             <hr class="colored-line">
         </main>
