Mensagem do commit9 26/03

--- a/html/colecoes.html
+++ b/html/colecoes.html
@@ -16,6 +16,28 @@
                     <button>Search</button>
                 </div>
             </div>
+            <nav class="navbar">
+                <ul class="nav-links">
+                    <li class="nav-item dropdown">
+                        <a href="...">Miniaturas Automotivas</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a href="colecoes/miniaturasLocomotivas.html">Miniaturas Locomotivas</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a href="...">Selos</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a href="...">Moedas</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a href="colecoes/comicBooks.html">Comic Books</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a href="....">Eventos</a>
+                    </li>
+                </ul>
+            </nav>
         </header>
 
         <!-- Botão para abrir o popup -->
@@ -42,21 +64,26 @@
             <a href="colecoes/miniaturasLocomotivas.html" class="collection-btn" style="background-image: url('../imagens/locomotiva1.jpg');">
                 <span>Miniaturas Locomotivas</span>
             </a>
-            <a href="colecoes/miniaturasAuto.html" class="collection-btn" style="background-image: url('../imagens/carros.jpg');">
+            <a href="colecoes/miniaturasAuto.html" class="collection-btn" style="background-image: url('../imagens/automotiva1.jpg');">
                 <span>Miniaturas Automotivas</span>
             </a>
-            <a href="colecoes/moedas.html" class="collection-btn" style="background-image: url('../imagens/carros.jpg');">
+            <a href="colecoes/moedas.html" class="collection-btn" style="background-image: url('../imagens/moeda1.jpeg');">
                 <span>Moedas</span>
             </a>
-            <a href="colecoes/selos.html" class="collection-btn" style="background-image: url('../imagens/carros.jpg');">
+            <a href="colecoes/selos.html" class="collection-btn" style="background-image: url('../imagens/selo1.jpg');">
                 <span>Selos</span>
             </a>
-            <a href="colecoes/comicBooks.html" class="collection-btn" style="background-image: url('../imagens/carros.jpg');">
+            <a href="colecoes/comicBooks.html" class="collection-btn" style="background-image: url('../imagens/comicBook1.jpg');">
                 <span>Comic Books</span>
             </a>
         </div>
         
         <script src="../java/scrip.js"></script>
     </body>
+
+    <footer>
+        <hr class="colored-line">
+        <p style="text-align: center;">&copy; 2025 Portal do Colecionador. Todos os direitos reservados - Grupo7.</p>
+    </footer>
 
 </html>
