--- a/html/index.html
+++ b/html/index.html
@@ -44,61 +44,46 @@
         <main>
             <div class="below-navbar">
                 <h1>Bem-vindo</h1>
-                <a href="colecoes.html" class="button-collection">Ver coleções</a>
+                <button class="button-collection" onclick="window.location.href='colecoes.html';">Ver coleções</button>
             </div>
             <hr class="colored-line">
         </main>
 
         <section>
             <div class="below-line">
-                <h2>Coleções mais vendidas</h2>
+                <h2>Coleções mais visualizadas</h2>
                 <section class="collection-section">
-                    <h2>Miniaturas de Locomotivas</h2>
+                    <h2>Comic Books</h2>
                     <div class="collection-container">
                         <div class="collection-item">
-                            <img src="../imagens/locomotiva1.jpg" alt="Locomotiva Clássica">
-                            <h3>Locomotiva Clássica</h3>
-                            <p>...</p>
+                            <img src="../imagens/comicBook1.jpg" alt="Comic Book - Avengers">
+                            <h3>Avengers</h3>
                         </div>
                         <div class="collection-item">
-                            <img src="../imagens/locomotiva2.jpg" alt="Locomotiva Moderna">
-                            <h3>Locomotiva Moderna</h3>
-                            <p>...</p>
+                            <img src="../imagens/comicBook2.jpg" alt="The X-Men">
+                            <h3>The X-Men</h3>
                         </div>
                         <div class="collection-item">
-                            <img src="../imagens/locomotiva3.jpg" alt="Locomotiva a Diesel">
-                            <h3>Locomotiva a Diesel</h3>
-                            <p>...</p>
-                        </div>
-                        <div class="collection-item">
-                            <img src="../imagens/locomotiva3.jpg" alt="Locomotiva a Diesel">
-                            <h3>Locomotiva a Diesel</h3>
-                            <p>...</p>
+                            <img src="../imagens/comicBook3.jpg" alt="Hulk & Batman">
+                            <h3>Hulk & Batman</h3>
                         </div>
                     </div>
                 </div>
                 <div class="below-line">
                     <section class="collection-section">
+                        <h2>Miniaturas de Automotivas</h2>
                         <div class="collection-container">
                             <div class="collection-item">
-                                <img src="../imagens/locomotiva1.jpg" alt="Locomotiva Clássica">
-                                <h3>Locomotiva Clássica</h3>
-                                <p>...</p>
+                                <img src="../imagens/automotiva1.jpg" alt="Mini-cooper">
+                                <h3>Mini-cooper</h3>
                             </div>
                             <div class="collection-item">
-                                <img src="../imagens/locomotiva2.jpg" alt="Locomotiva Moderna">
-                                <h3>Locomotiva Moderna</h3>
-                                <p>...</p>
+                                <img src="../imagens/automotiva2.jpg" alt="Volkswagen Fusca">
+                                <h3>Volkswagen Fusca</h3>
                             </div>
                             <div class="collection-item">
-                                <img src="../imagens/locomotiva3.jpg" alt="Locomotiva a Diesel">
-                                <h3>Locomotiva a Diesel</h3>
-                                <p>...</p>
-                            </div>
-                            <div class="collection-item">
-                                <img src="../imagens/locomotiva3.jpg" alt="Locomotiva a Diesel">
-                                <h3>Locomotiva a Diesel</h3>
-                                <p>...</p>
+                                <img src="../imagens/automotiva3.jpg" alt="McLaren">
+                                <h3>McLaren</h3>
                             </div>
                         </div>
                     </div>
@@ -126,5 +111,10 @@
         
         <script src="../java/scrip.js"></script>
     </body> 
+
+    <footer>
+        <hr class="colored-line">
+        <p style="text-align: center;">&copy; 2025 Portal do Colecionador. Todos os direitos reservados - Grupo7.</p>
+    </footer>
 
 </html>
