--- a/html/colecoes.html
+++ b/html/colecoes.html
@@ -19,22 +19,13 @@
             <nav class="navbar">
                 <ul class="nav-links">
                     <li class="nav-item dropdown">
-                        <a href="...">Miniaturas Automotivas</a>
-                    </li>
-                    <li class="nav-item dropdown">
                         <a href="colecoes/miniaturasLocomotivas.html">Miniaturas Locomotivas</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a href="...">Selos</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a href="...">Moedas</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a href="colecoes/comicBooks.html">Comic Books</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a href="....">Eventos</a>
+                        <a href="eventos.html"">Eventos</a>
                     </li>
                 </ul>
             </nav>
@@ -61,17 +52,8 @@
         </div>
 
         <div class="button-collections">
-            <a href="colecoes/miniaturasLocomotivas.html" class="collection-btn" style="background-image: url('../imagens/locomotiva1.jpg');">
-                <span>Miniaturas Locomotivas</span>
-            </a>
             <a href="colecoes/miniaturasAuto.html" class="collection-btn" style="background-image: url('../imagens/automotiva1.jpg');">
                 <span>Miniaturas Automotivas</span>
-            </a>
-            <a href="colecoes/moedas.html" class="collection-btn" style="background-image: url('../imagens/moeda1.jpeg');">
-                <span>Moedas</span>
-            </a>
-            <a href="colecoes/selos.html" class="collection-btn" style="background-image: url('../imagens/selo1.jpg');">
-                <span>Selos</span>
             </a>
             <a href="colecoes/comicBooks.html" class="collection-btn" style="background-image: url('../imagens/comicBook1.jpg');">
                 <span>Comic Books</span>
