Mensagem do commit11 26/03

--- a/html/colecoes/miniaturasAuto.html
+++ b/html/colecoes/miniaturasAuto.html
@@ -9,7 +9,7 @@
     <body>
         <header>
             <div class="top-bar">
-                <div class="logo">Coleção</div>
+                <div class="logo""><a href="../index.html">Coleção</a></div>
                 <div class="search-bar">
                     <input type="text" placeholder="Buscar...">
                     <button>Buscar</button>
@@ -43,21 +43,21 @@
                         <img src="../../imagens/automotiva1.jpg" alt="Miniatura Mini-cooper">
                         <h3>Mini-cooper</h3>
                         <p>Uma réplica detalhada do Mini-cooper.</p>
-                        <button>Saiba Mais</button>
+                        <button onclick="window.location.href='itens/itemMiniCooper.html';">Saiba Mais</button>
                     </div>
 
                     <div class="collection-item">
                         <img src="../../imagens/automotiva2.jpg" alt="Volkswagen Fusca">
                         <h3>Volkswagen Fusca</h3>
                         <p>Uma miniatura clássica.</p>
-                        <button>Saiba Mais</button>
+                        <button onclick="window.location.href='itens/itemVolkswagenFusca.html';">Saiba Mais</button>
                     </div>
 
                     <div class="collection-item">
                         <img src="../../imagens/automotiva3.jpg" alt="McLaren">
                         <h3>McLaren</h3>
                         <p>Modelo lendário com detalhes impressionantes.</p>
-                        <button>Saiba Mais</button>
+                        <button onclick="window.location.href='itens/itemMcLaren.html';">Saiba Mais</button>
                     </div>
                 </div>
             </section>
