--- a/html/index.html
+++ b/html/index.html
@@ -11,7 +11,7 @@
     <body>
         <header>
             <div class="top-bar">
-                <div class="logo">Portal do Colecionador</div>
+                <div class="logo" href="index.html">Portal do Colecionador</div>
                 <div class="search-bar">
                     <input type="text" placeholder="Search...">
                     <button>Search</button>
@@ -21,15 +21,6 @@
                 <ul class="nav-links">
                     <li class="nav-item dropdown">
                         <a href="colecoes/miniaturasAuto.html">Miniaturas Automotivas</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a href="colecoes/miniaturasLocomotivas.html">Miniaturas Locomotivas</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a href="colecoes/selos.html">Selos</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a href="colecoes/moedas.html">Moedas</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a href="colecoes/comicBooks.html">Comic Books</a>
