--- a/html/colecoes.html
+++ b/html/colecoes.html
@@ -10,7 +10,7 @@
     <body>
         <header>
             <div class="top-bar">
-                <div class="logo">Coleções</div>
+                <div class="logo""><a href="index.html">Coleção</a></div>
                 <div class="search-bar">
                     <input type="text" placeholder="Search...">
                     <button>Search</button>
