--- a/html/eventos.html
+++ b/html/eventos.html
@@ -11,7 +11,7 @@
     <body>
         <header>
             <div class="top-bar">
-                <div class="logo">Portal do Colecionador</div>
+                <div class="logo""><a href="index.html">Eventos</a></div>
                 <div class="search-bar">
                     <input type="text" placeholder="Search...">
                     <button>Search</button>
