Mensagem do commit12 26/03

--- a/html/colecoes/comicBooks.html
+++ b/html/colecoes/comicBooks.html
@@ -42,23 +42,23 @@
             <section class="collection-section">
                 <div class="collection-container">
                     <div class="collection-item">
-                        <img src="../imagens/comic1.jpg" alt="Comic Book 1">
-                        <h3>Batman: The Killing Joke</h3>
-                        <p>Edição especial do clássico de Alan Moore.</p>
+                        <img src="../../imagens/comic1.jpg" alt="Comic Book 1">
+                        <h3>Avengers</h3>
+                        <p>Um clássico de Stan Lee.</p>
                         <button>Ver Detalhes</button>
                     </div>
 
                     <div class="collection-item">
-                        <img src="../imagens/comic2.jpg" alt="Comic Book 2">
-                        <h3>Spider-Man #1</h3>
-                        <p>Primeira edição solo do Homem-Aranha.</p>
+                        <img src="../../imagens/comic2.jpg" alt="Comic Book 2">
+                        <h3>The X-Men</h3>
+                        <p>Primeira edição de The X-Men.</p>
                         <button>Ver Detalhes</button>
                     </div>
 
                     <div class="collection-item">
-                        <img src="../imagens/comic3.jpg" alt="Comic Book 3">
-                        <h3>Watchmen</h3>
-                        <p>Uma das HQs mais icônicas da história.</p>
+                        <img src="../../imagens/comic3.jpg" alt="Comic Book 3">
+                        <h3>Hulk & Batman</h3>
+                        <p>Os favoritos.</p>
                         <button>Ver Detalhes</button>
                     </div>
                 </div>
