--- a/html/colecoes/itensAuto/itemMiniCooper.html
+++ b/html/colecoes/itensAuto/itemMiniCooper.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-    <html lang="pt">
+<html lang="pt">
 
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Volkswagen Fusca | Detalhes</title>
+        <title>Mini-cooper | Detalhes</title>
         <link rel="stylesheet" href="../../../css/styles.css" />
     </head>
 
     <body>
         <header>
             <div class="top-bar">
-                <div class="logo""><a href="../../index.html">Coleção</a></div>
+                <div class="logo""><a href="../../index.html">Item</a></div>
                 <div class="search-bar">
                     <input type="text" placeholder="Buscar..." />
                     <button>Buscar</button>
@@ -34,19 +34,19 @@
 
         <main>
             <div class="below-navbar">
-                <h1>Miniatura Volkswagen Fusca</h1>
+                <h1>Miniatura Mini-cooper</h1>
             </div>
             <hr class="colored-line">
 
             <section class="collection-section">
                 <div class="collection-container">
                     <div class="collection-item">
-                        <img src="../../../imagens/automotiva2.jpg" class="zoom-hover" id="itemImage" alt="Volkswagen Fusca miniatura" />
-                        <h3>Volkswagen Fusca Clássico Vermelho</h3>
-                        <p><strong>Escala:</strong> 1:32</p>
-                        <p><strong>Material:</strong> Plástico resistente e detalhes em borracha</p>
-                        <p><strong>Ano de Fabricação:</strong> 2022</p>
-                        <p><strong>Detalhes:</strong> Miniatura do icônico Fusca com portas e capô móveis, pintura vermelha brilhante, e rodas com suspensão funcional. Um clássico para todos os colecionadores nostálgicos.</p>
+                        <img src="../../../imagens/automotiva1.jpg" class="zoom-hover" id="itemImage" alt="Mini-cooper em miniatura" />
+                        <h3>Mini-cooper Azul Metálico</h3>
+                        <p><strong>Escala:</strong> 1:24</p>
+                        <p><strong>Material:</strong> Liga metálica e plástico ABS</p>
+                        <p><strong>Ano de Fabricação:</strong> 2023</p>
+                        <p><strong>Detalhes:</strong> Réplica fiel do modelo original com portas que abrem, rodas funcionais, pintura premium e acabamento interno detalhado. Ideal para colecionadores exigentes.</p>
                     </div>
                 </div>
             </section>
