--- a/html/colecoes/miniaturasAuto.html
+++ b/html/colecoes/miniaturasAuto.html
@@ -43,21 +43,21 @@
                         <img src="../../imagens/automotiva1.jpg" alt="Miniatura Mini-cooper">
                         <h3>Mini-cooper</h3>
                         <p>Uma réplica detalhada do Mini-cooper.</p>
-                        <button onclick="window.location.href='itens/itemMiniCooper.html';">Saiba Mais</button>
+                        <button onclick="window.location.href='itensAuto/itemMiniCooper.html';">Saiba Mais</button>
                     </div>
 
                     <div class="collection-item">
                         <img src="../../imagens/automotiva2.jpg" alt="Volkswagen Fusca">
                         <h3>Volkswagen Fusca</h3>
                         <p>Uma miniatura clássica.</p>
-                        <button onclick="window.location.href='itens/itemVolkswagenFusca.html';">Saiba Mais</button>
+                        <button onclick="window.location.href='itensAuto/itemVolkswagenFusca.html';">Saiba Mais</button>
                     </div>
 
                     <div class="collection-item">
                         <img src="../../imagens/automotiva3.jpg" alt="McLaren">
                         <h3>McLaren</h3>
                         <p>Modelo lendário com detalhes impressionantes.</p>
-                        <button onclick="window.location.href='itens/itemMcLaren.html';">Saiba Mais</button>
+                        <button onclick="window.location.href='itensAuto/itemMcLaren.html';">Saiba Mais</button>
                     </div>
                 </div>
             </section>
