--- a/html/colecoes/itensComic/itemAvengers.html
+++ b/html/colecoes/itensComic/itemAvengers.html
@@ -35,6 +35,7 @@
         <main>
             <div class="below-navbar">
                 <h1>Comic Book Avengers</h1>
+                <button onclick="window.location.href='../comicBooks.html';">Voltar</button>
             </div>
             <hr class="colored-line">
 
@@ -44,9 +45,9 @@
                         <img src="../../../imagens/comicBook1.jpg" alt="Avengers" />
                         <h3>Avengers</h3>
                         <p><strong>Escala:</strong> 1:32</p>
-                        <p><strong>Material:</strong> Plástico resistente e detalhes em borracha</p>
-                        <p><strong>Ano de Fabricação:</strong> 2022</p>
-                        <p><strong>Detalhes:</strong> Miniatura do icônico Fusca com portas e capô móveis, pintura vermelha brilhante, e rodas com suspensão funcional. Um clássico para todos os colecionadores nostálgicos.</p>
+                        <p><strong>Material:</strong> Papel</p>
+                        <p><strong>Ano de Lançamento:</strong> 1963</p>
+                        <p><strong>Detalhes:</strong> Comic book do mais fomoso.</p>
                     </div>
                 </div>
             </section>
