Segunda tentativa de commit 15 27/03

--- a/html/colecoes/comicBooks.html
+++ b/html/colecoes/comicBooks.html
@@ -36,6 +36,7 @@
             <div class="below-navbar">
                 <h1>Comic Books</h1>
                 <p>Confira os quadrinhos raros e edições especiais disponíveis para coleção!</p>
+                <button onclick="window.location.href='index.html';">Voltar</button>
             </div>
             <hr class="colored-line">
 
@@ -47,8 +48,8 @@
                         <p id="desc1">Um clássico de Stan Lee.</p>
                         <div id="actions1">
                           <button onclick="window.location.href='itensComic/itemAvengers.html';">Saiba Mais</button>
-                          <button onclick="editItem(1)">Editar</button>
-                          <button>Apagar</button>
+                          <button class="edit-btn">Editar</button>
+                          <button class="delete-btn">Apagar</button>
                         </div>
                       </div>                                       
                                       
@@ -92,7 +93,7 @@
             <p style="text-align: center;">&copy; 2025 Portal do Colecionador. Todos os direitos reservados - Grupo7.</p>
         </footer>
 
-        <script src="../java/scrip.js"></script>
+        <script src="../../java/scrip.js"></script>
     </body>
 
 </html>
