--- a/html/colecoes/itensAuto/itemVolkswagenFusca.html
+++ b/html/colecoes/itensAuto/itemVolkswagenFusca.html
@@ -35,6 +35,7 @@
         <main>
             <div class="below-navbar">
                 <h1>Miniatura Volkswagen Fusca</h1>
+                <button onclick="window.location.href='../miniaturasAuto.html';">Voltar</button>
             </div>
             <hr class="colored-line">
 
