--- a/html/colecoes/miniaturasAuto.html
+++ b/html/colecoes/miniaturasAuto.html
@@ -67,5 +67,7 @@
             <hr class="colored-line">
             <p style="text-align: center;">&copy; 2025 Portal do Colecionador. Todos os direitos reservados - Grupo7.</p>
         </footer>
+
+        <script src="../../java/scrip.js"></script>
     </body>
 </html>
