--- a/html/eventos.html
+++ b/html/eventos.html
@@ -35,6 +35,7 @@
             <div class="below-navbar">
                 <h1>Eventos de Colecionadores</h1>
                 <p>Confira os eventos que já aconteceram e os que ainda estão por vir!</p>
+                <button onclick="window.location.href='index.html';">Voltar</button>
             </div>
             <hr class="colored-line">
     
