mensagem do commit 28/03

--- a/html/colecoes.html
+++ b/html/colecoes.html
@@ -55,10 +55,13 @@
 
         <div class="button-collections">
             <a href="colecoes/miniaturasAuto.html" class="collection-btn" style="background-image: url('../imagens/automotiva1.jpg');">
-                <span>Miniaturas Automotivas</span>
+                <p class="nome-colecao"><span>Miniaturas Automotivas</span></p>
+                <p class="data-criacao">22 de março de 2025</p>
+
             </a>
             <a href="colecoes/comicBooks.html" class="collection-btn" style="background-image: url('../imagens/comicBook1.jpg');">
                 <span>Comic Books</span>
+                <p id="data-criacao">22 de março de 2025</p>
             </a>
         </div>
         
