--- a/html/colecoes/itensAuto/itemMcLaren.html
+++ b/html/colecoes/itensAuto/itemMcLaren.html
@@ -43,11 +43,9 @@
                 <div class="collection-container">
                     <div class="collection-item">
                         <img src="../../../imagens/automotiva3.jpg" class="zoom-hover" id="itemImage" alt="Miniatura McLaren" />
-                        <h3>McLaren Supercarro Verde Militar</h3>
-                        <p><strong>Escala:</strong> 1:18</p>
-                        <p><strong>Material:</strong> Liga metálica premium com detalhes cromados</p>
-                        <p><strong>Ano de Fabricação:</strong> 2023</p>
-                        <p><strong>Detalhes:</strong> Miniatura de alta precisão da McLaren com portas tipo asa de gaivota, interior realista, rodas esportivas douradas e acabamento em verde militar. Item exclusivo para colecionadores avançados.</p>
+                        <h3 id="nome">McLaren Supercarro Verde Militar</h3>
+                        <p id="peso"><strong>Peso:</strong> 100g</p>
+                        <p id="desc"><strong>Detalhes:</strong> Miniatura de alta precisão da McLaren com portas tipo asa de gaivota, interior realista, rodas esportivas douradas e acabamento em verde militar. Item exclusivo para colecionadores avançados.</p>
                     </div>
                 </div>
             </section>
