--- a/html/colecoes/itensAuto/itemMiniCooper.html
+++ b/html/colecoes/itensAuto/itemMiniCooper.html
@@ -43,11 +43,9 @@
                 <div class="collection-container">
                     <div class="collection-item">
                         <img src="../../../imagens/automotiva1.jpg" class="zoom-hover" id="itemImage" alt="Mini-cooper em miniatura" />
-                        <h3>Mini-cooper Azul Metálico</h3>
-                        <p><strong>Escala:</strong> 1:24</p>
-                        <p><strong>Material:</strong> Liga metálica e plástico ABS</p>
-                        <p><strong>Ano de Fabricação:</strong> 2023</p>
-                        <p><strong>Detalhes:</strong> Réplica fiel do modelo original com portas que abrem, rodas funcionais, pintura premium e acabamento interno detalhado. Ideal para colecionadores exigentes.</p>
+                        <h3 id="nome">Mini-cooper Azul Metálico</h3>
+                        <p id="peso"><strong>Peso:</strong> 100g</p>
+                        <p id="desc"><strong>Detalhes:</strong> Réplica fiel do modelo original com portas que abrem, rodas funcionais, pintura premium e acabamento interno detalhado. Ideal para colecionadores exigentes.</p>
                     </div>
                 </div>
             </section>
