--- a/html/colecoes/itensComic/itemAvengers.html
+++ b/html/colecoes/itensComic/itemAvengers.html
@@ -42,12 +42,10 @@
             <section class="collection-section">
                 <div class="collection-container">
                     <div class="collection-item">
-                        <img src="../../../imagens/comicBook1.jpg" alt="Avengers" />
-                        <h3>Avengers</h3>
-                        <p><strong>Escala:</strong> 1:32</p>
-                        <p><strong>Material:</strong> Papel</p>
-                        <p><strong>Ano de Lançamento:</strong> 1963</p>
-                        <p><strong>Detalhes:</strong> Comic book do mais fomoso.</p>
+                        <img src="../../../imagens/comicBook1.jpg" id="imgItem" alt="Avengers" />
+                        <h3 id="nome">Avengers</h3>
+                        <p id="peso"><strong>Peso:</strong> 100g</p>
+                        <p id="desc"><strong>Detalhes:</strong> Comic book do mais fomoso.</p>
                     </div>
                 </div>
             </section>
