--- a/html/colecoes/itensComic/itemHulkBatman.html
+++ b/html/colecoes/itensComic/itemHulkBatman.html
@@ -42,12 +42,10 @@
             <section class="collection-section">
                 <div class="collection-container">
                     <div class="collection-item">
-                        <img src="../../../imagens/comicBook3.jpg" alt="Hulk & Batman" />
-                        <h3>Comic Book Hulk & Batman</h3>
-                        <p><strong>Escala:</strong> 1:30</p>
-                        <p><strong>Material:</strong> Papel</p>
-                        <p><strong>Ano de Lançamento:</strong>1983 e 1997 respetivamente</p>
-                        <p><strong>Detalhes:</strong> Comic book clássico.</p>
+                        <img src="../../../imagens/comicBook3.jpg" id="imgItem" alt="Hulk & Batman" />
+                        <h3 id="nome">Comic Book Hulk & Batman</h3>
+                        <p id="peso"><strong>Peso:</strong> 200g</p>
+                        <p id="desc"><strong>Detalhes:</strong> Comic book clássico.</p>
                     </div>
                 </div>
             </section>
