--- a/html/colecoes/miniaturasAuto.html
+++ b/html/colecoes/miniaturasAuto.html
@@ -24,7 +24,7 @@
                         <a href="colecoes/comicBooks.html">Comic Books</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a href="eventos.html">Eventos</a>
+                        <a href="../eventos.html">Eventos</a>
                     </li>
                 </ul>
             </nav>
