--- a/html/index.html
+++ b/html/index.html
@@ -34,6 +34,7 @@
 
         <main>
             <div class="below-navbar">
+                <button class="button-collection" onclick="window.location.href='utilizador.html';">Perfil</button>
                 <h1>Bem-vindo</h1>
                 <button class="button-collection" onclick="window.location.href='colecoes.html';">Ver coleções</button>
             </div>
