--- a/html/colecoes/comicBooks.html
+++ b/html/colecoes/comicBooks.html
@@ -26,7 +26,7 @@
                         <a href="comicBooks.html">Comic Books</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a href="eventos.html">Eventos</a>
+                        <a href="../eventos.html">Eventos</a>
                     </li>
                 </ul>
             </nav>
