--- a/html/colecoes/itensAuto/itemVolkswagenFusca.html
+++ b/html/colecoes/itensAuto/itemVolkswagenFusca.html
@@ -43,11 +43,9 @@
                 <div class="collection-container">
                     <div class="collection-item">
                         <img src="../../../imagens/automotiva2.jpg" class="zoom-hover" id="itemImage" alt="Volkswagen Fusca miniatura" />
-                        <h3>Volkswagen Fusca Clássico Vermelho</h3>
-                        <p><strong>Escala:</strong> 1:32</p>
-                        <p><strong>Material:</strong> Plástico resistente e detalhes em borracha</p>
-                        <p><strong>Ano de Fabricação:</strong> 2022</p>
-                        <p><strong>Detalhes:</strong> Miniatura do icônico Fusca com portas e capô móveis, pintura vermelha brilhante, e rodas com suspensão funcional. Um clássico para todos os colecionadores nostálgicos.</p>
+                        <h3 id="nome">Volkswagen Fusca Clássico Vermelho</h3>
+                        <p id="peso"><strong>Peso:</strong> 100g</p>
+                        <p id="desc"><strong>Detalhes:</strong> Miniatura do icônico Fusca com portas e capô móveis, pintura vermelha brilhante, e rodas com suspensão funcional. Um clássico para todos os colecionadores nostálgicos.</p>
                     </div>
                 </div>
             </section>
