mensagem do commit 28/03

--- a/html/colecoes.html
+++ b/html/colecoes.html
@@ -61,16 +61,16 @@
             </a>
             <a href="colecoes/comicBooks.html" class="collection-btn" style="background-image: url('../imagens/comicBook1.jpg');">
                 <span>Comic Books</span>
-                <p id="data-criacao">22 de março de 2025</p>
+                <p class="data-criacao">22 de março de 2025</p>
             </a>
         </div>
         
-        <script src="../java/scrip.js"></script>
+        <footer>
+            <hr class="colored-line">
+            <p style="text-align: center;">&copy; 2025 Portal do Colecionador. Todos os direitos reservados - Grupo7.</p>
+        </footer>
+
+        <script src="../java/script.js"></script>
     </body>
-
-    <footer>
-        <hr class="colored-line">
-        <p style="text-align: center;">&copy; 2025 Portal do Colecionador. Todos os direitos reservados - Grupo7.</p>
-    </footer>
-
+    
 </html>
