--- a/html/colecoes/itensAuto/itemMcLaren.html
+++ b/html/colecoes/itensAuto/itemMcLaren.html
@@ -46,6 +46,7 @@
                         <h3 id="nome">McLaren Supercarro Verde Militar</h3>
                         <p id="peso"><strong>Peso:</strong> 100g</p>
                         <p id="desc"><strong>Detalhes:</strong> Miniatura de alta precisão da McLaren com portas tipo asa de gaivota, interior realista, rodas esportivas douradas e acabamento em verde militar. Item exclusivo para colecionadores avançados.</p>
+                        <p id="valor"><strong>Valor:</strong> 100€.</p>
                     </div>
                 </div>
             </section>
@@ -55,6 +56,8 @@
             <hr class="colored-line">
             <p style="text-align: center;">&copy; 2025 Portal do Colecionador. Todos os direitos reservados - Grupo7.</p>
         </footer>
+
+        <script src="../../java/script.js"></script>
     </body>
 
 </html>
