--- a/html/colecoes/itensAuto/itemVolkswagenFusca.html
+++ b/html/colecoes/itensAuto/itemVolkswagenFusca.html
@@ -46,6 +46,7 @@
                         <h3 id="nome">Volkswagen Fusca Clássico Vermelho</h3>
                         <p id="peso"><strong>Peso:</strong> 100g</p>
                         <p id="desc"><strong>Detalhes:</strong> Miniatura do icônico Fusca com portas e capô móveis, pintura vermelha brilhante, e rodas com suspensão funcional. Um clássico para todos os colecionadores nostálgicos.</p>
+                        <p id="valor"><strong>Valor:</strong> 100€.</p>
                     </div>
                 </div>
             </section>
@@ -55,6 +56,8 @@
             <hr class="colored-line">
             <p style="text-align: center;">&copy; 2025 Portal do Colecionador. Todos os direitos reservados - Grupo7.</p>
         </footer>
+
+        <script src="../../java/script.js"></script>
     </body>
 
 </html>
