--- a/html/eventos.html
+++ b/html/eventos.html
@@ -111,5 +111,6 @@
             <p style="text-align: center;">&copy; 2025 Portal do Colecionador. Todos os direitos reservados - Grupo7.</p>
         </footer>
      
+        <script src="../java/script.js"></script>
     </body>
 </html>
