--- a/html/colecoes/itensComic/itemHulkBatman.html
+++ b/html/colecoes/itensComic/itemHulkBatman.html
@@ -46,6 +46,7 @@
                         <h3 id="nome">Comic Book Hulk & Batman</h3>
                         <p id="peso"><strong>Peso:</strong> 200g</p>
                         <p id="desc"><strong>Detalhes:</strong> Comic book clássico.</p>
+                        <p id="valor"><strong>Valor:</strong> 100€.</p>
                     </div>
                 </div>
             </section>
@@ -55,6 +56,8 @@
             <hr class="colored-line">
             <p style="text-align: center;">&copy; 2025 Portal do Colecionador. Todos os direitos reservados - Grupo7.</p>
         </footer>
+
+        <script src="../../java/script.js"></script>
     </body>
 
 </html>
