--- a/html/index.html
+++ b/html/index.html
@@ -108,7 +108,7 @@
             <p style="text-align: center;">&copy; 2025 Portal do Colecionador. Todos os direitos reservados - Grupo7.</p>
         </footer>
 
-        <script src="../java/scrip.js"></script>
+        <script src="../java/script.js"></script>
     </body> 
 
 </html>
